--- a/templates/content-blocks/homepage/hero.html.twig
+++ b/templates/content-blocks/homepage/hero.html.twig
@@ -1,10 +1,10 @@
 <div class="row">
-	<div class="col-lg-6 d-flex align-items-center">
+	<div class="col-lg-6 d-flex align-items-center mb-5 mb-lg-0">
 		{% include 'content-blocks/text-button.html.twig'  
 			with {
 			'content': content,
-			'headerCssClasses': 'mb-3',
-            'text_css_classes': 'lh-lg mb-3'
+			'headerCssClasses': 'mb-4 mb-lg-3',
+            'textCssClasses': 'lh-lg mb-3'
 		}  %}
 	</div>
 	<div class="col-lg-6 d-flex justify-content-end">
