--- a/assets/frontend/scss/main.scss
+++ b/assets/frontend/scss/main.scss
@@ -20,6 +20,7 @@ Import all the necessary SCSS files to compile the final CSS.
 // Components
 @import "components/btn";
 @import "components/cards";
+@import "components/contact-form";
 @import "components/logo";
 
 // Layout
