--- a/templates/layout/footer-main.html.twig
+++ b/templates/layout/footer-main.html.twig
@@ -1,5 +1,6 @@
 <footer>
 	{% block footer %}
+		{% if s_default_snippet is defined and s_default_snippet is not null %}
 		<div class="container">
 			<div class="row my-3">
 				<div class="col d-flex align-items-center">
@@ -24,5 +25,6 @@
 				</div>
 			</div>
 		</div>
+		{% endif %}
 	{% endblock %}
 </footer>
